# spindle

./: .gitignore  README.md  config.example.yaml  corrections.yaml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
spindle/: __init__.py  albumlock.py  bot.py  capture.py  cli.py  config.py  display.py  fingerprint.py  history.py  notify.py  scrobbler.py  session.py  spotify.py
